<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature_ski_places.presentation.ui.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_view_fragment_home_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_regular"
                android:paddingStart="@dimen/_20sdp"
                android:paddingTop="@dimen/_8sdp"
                android:text="@string/main_screen_title"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/_18ssp"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlSymmetry" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/search_ski_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@drawable/square_circle_corners"
                android:inputType="textPersonName"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_16sdp"
                app:endIconDrawable="@drawable/ic_baseline_input_24"
                app:endIconMode="custom"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_fragment_home_title"
                app:startIconDrawable="@drawable/ic_search_24"
                tools:ignore="RtlSymmetry">
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/search_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_39sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:hint="@string/search_ski_place" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/ll_popular_places"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/search_ski_place">

                <TextView
                    android:id="@+id/subtitle_main_res_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_regular"
                    android:text="@string/subtitle_main_rv"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/_16ssp" />

                <ImageView
                    android:id="@+id/iv_refresh_home"
                    android:layout_width="@dimen/_23sdp"
                    android:layout_height="@dimen/_23sdp"
                    android:layout_marginStart="@dimen/_96sdp"
                    android:contentDescription="@string/refresh_data"
                    android:src="@drawable/ic_refresh_24" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_ski_places"
                android:layout_width="0dp"
                android:layout_height="@dimen/_600sdp"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_popular_places"
                tools:listitem="@layout/item_ski_place" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>