<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<!--    tools:context=".feature_ski_places.presentation.ui.HowToGetFragment">-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_back_htg"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_24sdp"
                android:layout_marginTop="@dimen/_42sdp"
                app:cardCornerRadius="@dimen/_8sdp"
                app:elevation="@dimen/_4sdp"
                app:layout_anchorGravity="top|left"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/image_view_arrow_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_3sdp"
                    android:src="@drawable/ic_arrow_back_24" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/ll_htg_title"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:elevation="@dimen/_4sdp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_title_how_to_get"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_medium"
                    android:text="@string/how_to_get_title"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/_15ssp" />

                <TextView
                    android:id="@+id/tv_subtitle_name_how_to_get"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:fontFamily="@font/quicksand_medium"
                    android:text="@string/abzakovo"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/_15ssp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/image_view_how_to_get"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_210sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_28sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:contentDescription="@string/how_to_get_title"
                android:scaleType="centerCrop"
                android:src="@drawable/how_to_get_abzakovo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_how_to_get_geo_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:background="@color/white"
                android:fontFamily="@font/quicksand_regular"
                android:text="@string/geo_data"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_view_how_to_get" />

            <TextView
                android:id="@+id/tv_description_how_to_get"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_500sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:background="@color/white"
                android:fontFamily="@font/quicksand_regular"
                android:text="@string/how_to_get_abzakovo"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_how_to_get_geo_data" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>